# docs/swagger/swagger.yaml
@@ -304,8 +304,31 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{"token": "", "expires_at": 0},"message":"ok"}'
+          description: '{"code":200,"data":{"token_type": "", "access_token": "",
+            "refresh_token": "", "expires_at": 0},"message":"ok"}'
           schema:
             type: string
       summary: 授权
+  /refreshToken:
+    post:
+      parameters:
+      - description: access_token
+        in: formData
+        name: access_token
+        required: true
+        type: string
+      - description: refresh_token
+        in: formData
+        name: refresh_token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"token_type": "", "access_token": "",
+            "refresh_token": "", "expires_at": 0},"message":"ok"}'
+          schema:
+            type: string
+      summary: 刷新accessToken
 swagger: "2.0"
